--- a/content/w1.html
+++ b/content/w1.html
@@ -2,6 +2,7 @@
         <head>
         <title>CMSTemplate</title>
         <meta charset="utf-8">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -133,11 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='進度.html'>Next</a> >> 進度<br /><h1>第四組</h1>
-<p>名單:</p>
-<p>組長:40923148</p>
-<p>組員:40923109、<span>40923111、40923116、40923122、40923146</span></p>
-<br /> <a href='進度.html'>Next</a> >> 進度</div>
+    <div id="tipue_search_content">進度 << <a href='進度.html'>Previous</a> <br /><h1>w1</h1>
+<p>在網際網路W14時，由組長創建出此群組，然後在把組員拉進來使得檔案不會丟失(大家都有一份的情況下</p>
+<p></p><br />進度 << <a href='進度.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
