--- a/content/進度.html
+++ b/content/進度.html
@@ -2,6 +2,7 @@
         <head>
         <title>CMSTemplate</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -133,11 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='進度.html'>Next</a> >> 進度<br /><h1>第四組</h1>
-<p>名單:</p>
-<p>組長:40923148</p>
-<p>組員:40923109、<span>40923111、40923116、40923122、40923146</span></p>
-<br /> <a href='進度.html'>Next</a> >> 進度</div>
+    <div id="tipue_search_content">第四組 << <a href='第四組.html'>Previous</a> <a href='w1.html'>Next</a> >> w1<br /><h1>進度</h1>
+<br />第四組 << <a href='第四組.html'>Previous</a> <a href='w1.html'>Next</a> >> w1</div>
         
     <!-- footer -->
       <div class="container">
