--- a/content/進度.html
+++ b/content/進度.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li>
+                     <li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li></ul><li><a href='測試.html'>測試</a></li>
                       </ul>
                 </nav>
               </div>
