--- a/content/index.html
+++ b/content/index.html
@@ -102,14 +102,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container-fluid">
                 <div class="row align-items-center">
-                <h1>cmstemplate</h1>
+                <h1>wcm2021-ag4</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cmstemplate</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">wcm2021-ag4</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li></ul><li><a href='測試.html'>測試</a></li>
+                     <li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li>
                       </ul>
                 </nav>
               </div>
