--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -5,5 +5,7 @@
 <h1>進度</h1>
 <h2>w1</h2>
 <p>在網際網路W14時，由組長創建出此群組，然後在把組員拉進來使得檔案不會丟失(大家都有一份的情況下</p>
-<h1>測試</h1>
 <p></p>
+<div id="gtx-trans" style="position: absolute; left: -104px; top: 226.175px;">
+<div class="gtx-trans-icon"></div>
+</div>
