--- a/content/w1.html
+++ b/content/w1.html
@@ -136,10 +136,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">進度 << <a href='進度.html'>Previous</a> <br /><h1>w1</h1>
 <p>在網際網路W14時，由組長創建出此群組，然後在把組員拉進來使得檔案不會丟失(大家都有一份的情況下</p>
-<p></p>
-<div id="gtx-trans" style="position: absolute; left: -104px; top: 226.175px;">
-<div class="gtx-trans-icon"></div>
-</div><br />進度 << <a href='進度.html'>Previous</a> </div>
+<p>測試</p><br />進度 << <a href='進度.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
