--- a/config/content.htm
+++ b/config/content.htm
@@ -2,9 +2,12 @@
 <p>名單:</p>
 <p>組長:40923148</p>
 <p>組員:40923109、<span>40923111、40923116、40923122、40923146</span></p>
-<p>gitlab:</p>
+<p>gitlab:<a href="https://40923148.gitlab.io/wcm2021-ag4/content/index.html">https://40923148.gitlab.io/wcm2021-ag4/content/index.html</a></p>
 <p><span></span></p>
 <h1>進度</h1>
 <h2>w1</h2>
 <p>在網際網路W14時，由組長創建出此群組，然後在把組員拉進來使得檔案不會丟失(大家都有一份的情況下</p>
 <p></p>
+<div id="gtx-trans" style="position: absolute; left: 35px; top: 155.475px;">
+<div class="gtx-trans-icon"></div>
+</div>
