--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -2,6 +2,7 @@
 <p>名單:</p>
 <p>組長:40923148</p>
 <p>組員:40923109、<span>40923111、40923116、40923122、40923146</span></p>
+<p>gitlab:</p>
 <p><span></span></p>
 <h1>進度</h1>
 <h2>w1</h2>
