--- a/content/第四組.html
+++ b/content/第四組.html
@@ -138,7 +138,7 @@ img.add_border {
 <p>名單:</p>
 <p>組長:40923148</p>
 <p>組員:40923109、<span>40923111、40923116、40923122、40923146</span></p>
-<p>gitlab:</p>
+<p>gitlab:<a href="https://40923148.gitlab.io/wcm2021-ag4/content/index.html">https://40923148.gitlab.io/wcm2021-ag4/content/index.html</a></p>
 <p><span></span></p>
 <br /> <a href='進度.html'>Next</a> >> 進度</div>
         
