--- a/content/w1.html
+++ b/content/w1.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a></li>
+                     <li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w1.html'>w1</a><li><a href='w2.html'>w2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,12 +134,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">進度 << <a href='進度.html'>Previous</a> <br /><h1>w1</h1>
+    <div id="tipue_search_content">進度 << <a href='進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2<br /><h1>w1</h1>
 <p>在網際網路W14時，由組長創建出此群組，然後在把組員拉進來使得檔案不會丟失(大家都有一份的情況下</p>
-<p></p>
-<div id="gtx-trans" style="position: absolute; left: 35px; top: 155.475px;">
-<div class="gtx-trans-icon"></div>
-</div><br />進度 << <a href='進度.html'>Previous</a> </div>
+<br />進度 << <a href='進度.html'>Previous</a> <a href='w2.html'>Next</a> >> w2</div>
         
     <!-- footer -->
       <div class="container">
