--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -7,7 +7,6 @@
 <h1>進度</h1>
 <h2>w1</h2>
 <p>在網際網路W14時，由組長創建出此群組，然後在把組員拉進來使得檔案不會丟失(大家都有一份的情況下</p>
-<p></p>
-<div id="gtx-trans" style="position: absolute; left: 35px; top: 155.475px;">
-<div class="gtx-trans-icon"></div>
-</div>
+<h2>w2</h2>
+<p>討論影片</p>
+<p><a href="https://www.youtube.com/watch?v=eycG0KW48Z8">https://www.youtube.com/watch?v=eycG0KW48Z8</a><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/eycG0KW48Z8" width="560"></iframe></p>
