--- a/content/測試.html
+++ b/content/測試.html
@@ -134,8 +134,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">第四組 << <a href='第四組.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>進度</h1>
-<br />第四組 << <a href='第四組.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+    <div id="tipue_search_content"> <a href='第四組.html'>Next</a> >> 第四組<br /><h1>測試</h1>
+<br /> <a href='第四組.html'>Next</a> >> 第四組</div>
         
     <!-- footer -->
       <div class="container">
