--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,4 @@
-<h1>測試</h1>
+<h1>完成</h1>
 <h1>第四組</h1>
 <p>名單:</p>
 <p>組長:40923148</p>
@@ -12,3 +12,6 @@
 <p>討論影片</p>
 <p><a href="https://www.youtube.com/watch?v=eycG0KW48Z8">https://www.youtube.com/watch?v=eycG0KW48Z8</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/eycG0KW48Z8" width="560"></iframe></p>
+<div id="gtx-trans" style="position: absolute; left: 4px; top: 44.5375px;">
+<div class="gtx-trans-icon"></div>
+</div>
