--- a/content/index.html
+++ b/content/index.html
@@ -122,7 +122,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='測試.html'>測試</a><li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li>
+                     <li><a href='完成.html'>完成</a><li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li>
                       </ul>
                 </nav>
               </div>
@@ -133,7 +133,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='第四組.html'>Next</a> >> 第四組<br /><h1>測試</h1>
+    <div id="tipue_search_content"> <a href='第四組.html'>Next</a> >> 第四組<br /><h1>完成</h1>
 <br /> <a href='第四組.html'>Next</a> >> 第四組</div>
         
     <!-- footer -->
