--- a/config/content.htm
+++ b/config/content.htm
@@ -1,5 +1,4 @@
 <h1>第四組</h1>
-<p>aa</p>
 <p>名單:</p>
 <p>組長:40923148</p>
 <p>組員:40923109、<span>40923111、40923116、40923122、40923146</span></p>
@@ -12,3 +11,6 @@
 <p>討論影片</p>
 <p><a href="https://www.youtube.com/watch?v=eycG0KW48Z8">https://www.youtube.com/watch?v=eycG0KW48Z8</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/eycG0KW48Z8" width="560"></iframe></p>
+<div id="gtx-trans" style="position: absolute; left: -3px; top: 31.075px;">
+<div class="gtx-trans-icon"></div>
+</div>
