--- a/content/w15.html
+++ b/content/w15.html
@@ -137,7 +137,10 @@ img.add_border {
     <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <br /><h1>w15</h1>
 <p>討論影片</p>
 <p><a href="https://www.youtube.com/watch?v=eycG0KW48Z8">https://www.youtube.com/watch?v=eycG0KW48Z8</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/eycG0KW48Z8" width="560"></iframe></p><br />w14 << <a href='w14.html'>Previous</a> </div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/eycG0KW48Z8" width="560"></iframe></p>
+<div id="gtx-trans" style="position: absolute; left: -3px; top: 31.075px;">
+<div class="gtx-trans-icon"></div>
+</div><br />w14 << <a href='w14.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
