--- a/content/w15.html
+++ b/content/w15.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li>
+                     <li><a href='測試.html'>測試</a><li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li>
                       </ul>
                 </nav>
               </div>
@@ -137,10 +137,7 @@ img.add_border {
     <div id="tipue_search_content">w14 << <a href='w14.html'>Previous</a> <br /><h1>w15</h1>
 <p>討論影片</p>
 <p><a href="https://www.youtube.com/watch?v=eycG0KW48Z8">https://www.youtube.com/watch?v=eycG0KW48Z8</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/eycG0KW48Z8" width="560"></iframe></p>
-<div id="gtx-trans" style="position: absolute; left: -3px; top: 31.075px;">
-<div class="gtx-trans-icon"></div>
-</div><br />w14 << <a href='w14.html'>Previous</a> </div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/eycG0KW48Z8" width="560"></iframe></p><br />w14 << <a href='w14.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
