--- a/content/第四組.html
+++ b/content/第四組.html
@@ -123,7 +123,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='測試.html'>測試</a><li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li>
+                     <li><a href='第四組.html'>第四組</a><li class='has-children'><a href='進度.html'>進度</a><ul class='dropdown'><li><a href='w14.html'>w14</a><li><a href='w15.html'>w15</a></li>
                       </ul>
                 </nav>
               </div>
@@ -134,13 +134,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">測試 << <a href='測試.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度<br /><h1>第四組</h1>
+    <div id="tipue_search_content"> <a href='進度.html'>Next</a> >> 進度<br /><h1>第四組</h1>
 <p>名單:</p>
 <p>組長:40923148</p>
 <p>組員:40923109、<span>40923111、40923116、40923122、40923146</span></p>
 <p>gitlab:<a href="https://40923148.gitlab.io/wcm2021-ag4/content/index.html">https://40923148.gitlab.io/wcm2021-ag4/content/index.html</a></p>
 <p><span></span></p>
-<br />測試 << <a href='測試.html'>Previous</a> <a href='進度.html'>Next</a> >> 進度</div>
+<br /> <a href='進度.html'>Next</a> >> 進度</div>
         
     <!-- footer -->
       <div class="container">
